why-us and rooftop-solar navbar text-align-center issue solve

--- a/css/rooftop-solar.css
+++ b/css/rooftop-solar.css
@@ -1,3 +1,8 @@
+/*
 body{
+    text-align: center;
+}*/
+
+.center{
     text-align: center;
 }
